--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hyperion.helios">
+    package="com.philips.lighting.quickstart"
+    android:versionCode="1"
+    android:versionName="1.0" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    
+    
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Helios">
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name="com.philips.lighting.quickstart.PHHomeActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+	    <activity
+	         android:name="com.philips.lighting.quickstart.MyApplicationActivity"
+	         android:label="@string/txt_selectbridges" >
+	    </activity>        
+	    <activity
+	         android:name="com.philips.lighting.quickstart.PHPushlinkActivity"
+	         android:label="@string/app_name" >
+	     </activity>        
+        
     </application>
-
-    <uses-permission
-        android:required="true"
-        android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission
-        android:required="true"
-        android:name="android.permission.CHANGE_WIFI_STATE"/>
-    <uses-permission
-        android:required="true"
-        android:name="android.permission.INTERNET"/>
-
 </manifest>
