--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,11 @@
 	    <activity
 	         android:name="com.philips.lighting.quickstart.PHPushlinkActivity"
 	         android:label="@string/app_name" >
-	     </activity>        
-        
+	     </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
+
     </application>
 </manifest>
